Minor fixes
Overflow fix, jQuery link fix, added jscolor credit.

TODO:
[ ] Fix GitHub star/fork links
[ ] Figure out a way to show palette links without overflowing...

--- a/css/index.css
+++ b/css/index.css
@@ -17,8 +17,12 @@ body {
 
 p {
     font-family: 'Open Sans', sans-serif;
+    overflow: auto;
 }
 
+p ul {
+    overflow: auto;
+}
 a {
     color: #1f8dd6;
     text-decoration: none;
